--- a/src/app/pages/main/reports/report-detail/report-detail.component.html
+++ b/src/app/pages/main/reports/report-detail/report-detail.component.html
@@ -65,7 +65,7 @@
         </ng-template>
 
         <ng-template pTemplate="right">
-                <p-button [disabled]="!this.selectedRto" icon="pi pi-search" iconPos="right" class="mr-2 inline-block" (onClick)="loadReportData()"/>
+                <p-button icon="pi pi-search" iconPos="right" class="mr-2 inline-block" (onClick)="loadReportData()"/>
         </ng-template>
     </p-toolbar>
 
