--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -2,12 +2,12 @@
    [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" [selectionMode]="'multiple'"
    (sampleBulkUpload)="exportSampleBulkUpload($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)"
    (transferInventory)="onTransferInventory($event)" (sendCommand)="onSendCommand($event)" (activate)="onActivate($event)" (fitment)="onFitment($event)"
-   (unlinkDevice)="handleDeviceUnlink($event)" (emitOverlayAction)="handleOverlayAction($event)" (setAlert)="handleSetAlert($event)" />
+   (unlinkDevice)="handleDeviceUnlink($event)" (emitOverlayAction)="handleOverlayAction($event)" (setAlert)="handleSetAlert($event)" (viewAlertConfig)="handleViewAlertConfig($event)" />
 
 
 <app-generic-dialog [customSaveLabel]="customSaveLabel" [stepFormFields]="stepFormFields" [disableStepperNextBtn]="disableStepperNextBtn"
    [isStepForm]="accesStepForm" [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
-    [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
+    [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing" [enableSaveBtn]="enableTempateSave"
     [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
     (onSave)="onSaveDevice($event)" (onSaveTemplateOne)="handleTemplateSave($event)" (onInputTextChange)="onInputTextChange($event)"  [template]="currentTemplate"
     (stepperDropDownChange)="stepperDropdwonChange($event)" (stepperInputTextChange)="stepperInputTextChange($event)" />
