--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -153,7 +153,7 @@
                                     }
                                 }
                                  @else {
-                                    {{ col.type === 'date' ? ((item[col.field] | date ) || '-')  : item[col.field] || '-' }}
+                                    {{ col.type === 'date' ? ((item[col.field] | date:'medium' ) || '-')  : item[col.field] || '-' }}
                                 }
                                 <p-overlayPanel #op appendTo="body"> 
                                     @if((selectedColumn === 'iccid' && selectedOverlayObject.simDetails)) {
