--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<p-toast [life]="2000" [breakpoints]="{
+<p-toast [breakpoints]="{
     '920px': { width: '50%' },
     '768px': { width: '60%' },
     '640px': { width: '70%' }, 
@@ -8,7 +8,7 @@
     '414px': { width: '80%' },
     '375px': { width: '80%' },
     '320px': { width: '80%' } 
-    }"
+    }" 
 />
 
 <router-outlet></router-outlet>
