--- a/src/app/pages/main/reports/all-reports/all-reports.component.html
+++ b/src/app/pages/main/reports/all-reports/all-reports.component.html
@@ -19,6 +19,9 @@
               <div class="relative z-2">
                 <div class="w-3rem h-3rem bg-white-alpha-20 border-round flex align-items-center justify-content-center mb-3">
                   <i class="pi pi-file-pdf text-white text-xl"></i>
+                  @if(report?.lottie?.display) {
+                    <!-- <ng-lottie  width="40px" height="40px" [options]="{ path: report?.lottie?.path }" />  -->
+                  }
                 </div>
                 <h3 class="text-white font-semibold text-lg line-height-3 m-0">
                   {{ report?.reportName }}
