--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,4 +1,4 @@
-<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="actions"
+<app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="actions" [loadingProgress]="loadingProgress" [totalPages]="totalPages" [newLoadingUI]="true"
    [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno','user.name']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" (deleteFitment)="onDeleteFitment($event)" [selectionMode]="'none'"
    (sampleBulkUpload)="exportSampleBulkUpload($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)"
    (transferInventory)="onTransferInventory($event)" (sendCommand)="onSendCommand($event)" (activate)="onActivate($event)" (fitment)="onFitment($event)" (emitOverlayAction)="handleOverlayAction($event)" />
