--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -1,4 +1,4 @@
-<!-- Option 1: Progress Bar with Count -->Add commentMore actions
+<!-- Option 1: Progress Bar with Count -->
 <!-- Progress Bar with Count (PrimeNG + PrimeFlex version) -->
 <div *ngIf="newLoadingUI && isDataLoading" class="fixed top-0 left-0 w-full h-full flex align-items-center justify-content-center z-5 backdrop-blur-md bg-black-alpha-50">
 
