Firmware Upload DOne

--- a/src/app/pages/main/settings/more/more.component.html
+++ b/src/app/pages/main/settings/more/more.component.html
@@ -7,24 +7,24 @@
     <ng-template pTemplate="content">
         <div class="grid formgrid">
             <div class="col-12 sm:col-4 py-2">
-              <label for="documentType" class="w-full sm:w-auto">OEM</label>
-              <p-dropdown styleClass="w-full mt-2" appendTo="body" name="oem" [options]="oemList" optionLabel="name"
-                                (onChange)="onOemChange($event)" [(ngModel)]="selectedOem" placeholder="Select a OEM">
-                                </p-dropdown>
+                <label for="documentType" class="w-full sm:w-auto">OEM</label>
+                <p-dropdown styleClass="w-full mt-2" appendTo="body" name="oem" [options]="oemList" optionLabel="name"
+                    (onChange)="onOemChange($event)" [(ngModel)]="selectedOem" placeholder="Select a OEM">
+                </p-dropdown>
             </div>
             <div class="col-12 sm:col-4 py-2">
-              <label for="file" class="w-full sm:w-auto">Upload your Document</label>
-              <p-fileUpload styleClass="w-full mt-2" name="file" (onSelect)="onSelect($event)" [multiple]="false" [auto]="true" accept=".txt"
-                                    maxFileSize="1000000">
-                                    <ng-template pTemplate="empty">
-                                        <div class="flex align-items-center justify-content-center flex-column">
-                                            <i class="pi pi-cloud-upload border-2 border-circle p-3 text-4xl text-400 border-400"></i>
-                                            <p class="mt-4 mb-0">Drag and drop files here to upload.</p>
-                                        </div>
-                                    </ng-template>
-                                </p-fileUpload>
+                <label for="file" class="w-full sm:w-auto">Upload your Document</label>
+                <p-fileUpload styleClass="w-full mt-2" name="file" (onSelect)="onSelect($event)" [multiple]="false"
+                    [auto]="true" maxFileSize="1000000">
+                    <ng-template pTemplate="empty">
+                        <div class="flex align-items-center justify-content-center flex-column">
+                            <i class="pi pi-cloud-upload border-2 border-circle p-3 text-4xl text-400 border-400"></i>
+                            <p class="mt-4 mb-0">Drag and drop files here to upload.</p>
+                        </div>
+                    </ng-template>
+                </p-fileUpload>
             </div>
-          </div>
+        </div>
     </ng-template>
 
     <ng-template pTemplate="footer">
@@ -33,7 +33,8 @@
                 <!-- <p-button icon="pi pi-user" rounded="true" text="true" />
                 <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" /> -->
             </div>
-            <p-button icon="pi pi-cloud-upload" [outlined]="true" [loading]="isLoading" (onClick)="uploadCertificate()" label="Upload" />
+            <p-button icon="pi pi-cloud-upload" [outlined]="true" [loading]="uploadingCertificate" (onClick)="uploadCertificate()"
+                label="Upload" />
 
         </div>
     </ng-template>
