Done POrt Assign and mute Notification

--- a/src/app/pages/main/management/assign-port/assign-port.component.html
+++ b/src/app/pages/main/management/assign-port/assign-port.component.html
@@ -1,6 +1,6 @@
-<app-generic-table [data]="ports" [columns]="columns" [rows]="10" [header]="'Port'" [isDataLoading]="isLoading"
-   [exportFilename]="'ports'" [globalFilterFields]="['rtocode','rtoname','state']" (edit)="onEditState($event)" [selectionMode]="'none'"
-    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)"/>
+<app-generic-table [data]="ports" [columns]="columns" [rows]="10" [header]="'Port'" [isDataLoading]="isLoading" [toolbarRightActions]="toolbarRightActions"
+   [exportFilename]="'ports'" [globalFilterFields]="['domain','port']" (edit)="onEditState($event)" [selectionMode]="'none'"
+    (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (dropdown)="onToolBarDropDownChange($event)"/>
 
 
 <app-generic-dialog [visible]="portDialog" [header]="'Ports'" [width]="'800px'" [modal]="true" [isEditing]="isEditing"
